# anonymcp

./: .env.example  .gitignore  BOOTSTRAP.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml
demo/: DEMO_PLAN.md  demo.tape  demo_cli.py
docker/: Dockerfile  docker-compose.yaml
docs/: architecture.mmd  workflow-crm.mmd  workflow-health.mmd  workflow-legal.mmd
policies/: default.yaml
src/anonymcp/: __init__.py  __main__.py  server.py
src/anonymcp/audit/: __init__.py  events.py  logger.py
src/anonymcp/audit/exporters/: __init__.py  file.py  stdout.py  webhook.py
src/anonymcp/config/: __init__.py  loader.py  settings.py
src/anonymcp/engine/: __init__.py  anonymizer.py  classifier.py  detector.py
src/anonymcp/engine/recognizers/: __init__.py  custom.py
src/anonymcp/middleware/: __init__.py  auth.py  roles.py
src/anonymcp/policy/: __init__.py  defaults.py  engine.py  models.py
src/anonymcp/utils/: __init__.py  text.py
tests/: conftest.py  test_anonymizer.py  test_audit.py  test_classifier.py  test_cli.py  test_detector.py  test_policy.py  test_roles.py  test_security_smoke.py
